force-app/main/default/objects/X7S_Questionnaire_Question__c/X7S_Questionnaire_Question__c.object-meta.xml
<CustomObject>
    <description>Object to support Questionnaire Question records as part of the Questionnaire accelerator from 7Summits.</description>
    <label>7S Questionnaire Question</label>
    <nameField>
        <displayFormat>FI-{0000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Questionnaires Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>