force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <inlineHelpText>1st answer/response/choice. Required</inlineHelpText>
    <label>Answer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>