force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <inlineHelpText>2nd answer/response/choice. Required</inlineHelpText>
    <label>Answer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>