force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <inlineHelpText>3rd answer/response/choice. Optional</inlineHelpText>
    <label>Answer 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>