force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/Flow_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Flow_Scenario__c</fullName>
    <inlineHelpText>The questionnaire the question is associated with</inlineHelpText>
    <label>Questionnaire</label>
    <referenceTo>X7S_Questionnaire__c</referenceTo>
    <relationshipLabel>7S Questionnaires Question</relationshipLabel>
    <relationshipName>Flow_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>