force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/Item_Text__c.field-meta.xml
<CustomField>
    <fullName>Item_Text__c</fullName>
    <inlineHelpText>Question to be displayed to the user</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>