force-app/main/default/objects/X7S_Questionnaire_Question__c/fields/SLDS_Icon__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Icon__c</fullName>
    <defaultValue>&quot;utility:question_mark&quot;</defaultValue>
    <inlineHelpText>The icon to be shown next to this question (e.g., utility:question_mark). See full list here: https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>SLDS Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>